--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ textarea {
 }
 
 #highlighter {
-  background-color: blue;
+  background-color: white;
   display: inline-block;
   text-align: center;
   padding-top: 40px;
