--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,14 @@ textarea {
   color: rgb(212, 0, 133);
 }
 
+#input1 {
+  border: 3px solid green;
+}
+
+#input2 {
+  border: 1px solid green;
+}
+
 #input1:focus {
   outline: none !important;
   border: none !important;
