--- a/main.css
+++ b/main.css
@@ -14,6 +14,11 @@ nav a {
     font-size: 1.5em !important;
 }
 
+.nav-item {
+    padding-left: 0.2em;
+    padding-right: 0.2em;
+}
+
 #profile {
     text-align: center;
 }
