--- a/static/css/global.css
+++ b/static/css/global.css
@@ -4,7 +4,6 @@ body {
  	background-color: rgb(15, 23, 42);
 	color: white;
 	margin: 0;
-	padding: 0;
 	min-height: 100vh;
-	padding: 0 100px;
+	padding: 0 2em;
 }
