--- a/static/css/global.css
+++ b/static/css/global.css
@@ -1,9 +1,20 @@
 
 body {
 	font-family: 'Quicksand';
- 	background-color: rgb(15, 23, 42);
-	color: white;
+ 	background-color: var(--background-color);
+	color: var(--text-color);
 	margin: 0;
 	min-height: 100vh;
 	padding: 0 2em;
+}
+
+
+/* Global CSS Variables */
+
+:root {
+	--selected-color: rgb(129, 230, 217);
+	--link-color: var(--selected-color);
+	--text-color: white;
+	--background-color: rgb(15, 23, 42);
+
 }
