Move navbar to component

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -8,6 +8,13 @@ body {
 	padding: 0 2em;
 }
 
+.max-page-width {
+	max-width: 900px;
+	width: 100%;
+	margin: auto;
+	align-items: center;
+	justify-content: center;
+}
 
 /* Global CSS Variables */
 
