--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,28 +1,29 @@
-
 body {
-	font-family: 'Quicksand';
- 	background-color: var(--background-color);
-	color: var(--text-color);
-	margin: 0;
-	min-height: 100vh;
-	padding: 0 2em;
+    font-family: 'Inter';
+     background-color: var(--background-color);
+    color: var(--text-color);
+    margin: 0;
+    min-height: 100vh;
+    padding: 0 2em;
+}
+
+html {
+    scrollbar-gutter: stable;
 }
 
 .max-page-width {
-	max-width: 900px;
-	width: 100%;
-	margin: auto;
-	align-items: center;
-	justify-content: center;
+    max-width: 900px;
+    width: 100%;
+    margin: auto;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Global CSS Variables */
 
 :root {
-	--selected-color: rgb(129, 230, 217);
-	--link-color: var(--selected-color);
-	--text-color: white;
-	--background-color: rgb(15, 23, 42);
+    --text-color: rgb(41, 41, 41);
+    --background-color: white;
 
 }
 
@@ -40,33 +41,33 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	/* font: inherit; */
-	vertical-align: baseline;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    /* font: inherit; */
+    vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-	display: block;
+    display: block;
 }
 /* body {
-	line-height: 1;
+    line-height: 1;
 } */
 ol, ul {
-	list-style: none;
+    list-style: none;
 }
 blockquote, q {
-	quotes: none;
+    quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-	content: '';
-	content: none;
+    content: '';
+    content: none;
 }
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
