--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,12 +13,12 @@ import { SITE } from "@consts";
         </div>
       </Link>
       <nav class="flex gap-1">
-        <Link href="/blog">
+        <!-- <Link href="/blog">
           blog
         </Link>
         <span>
           {`/`}
-        </span>
+        </span> -->
         <Link href="/work">
           work
         </Link>
@@ -28,12 +28,12 @@ import { SITE } from "@consts";
         <Link href="/education">
           education
         </Link>
-        <span>
+        <!-- <span>
           {`/`}
         </span>
         <Link href="/projects">
           projects
-        </Link>
+        </Link> -->
       </nav>
     </div>
   </Container>
